project(test_driver CXX)
find_package(Elemental)

add_executable(driver driver.cc)
if(Elemental_FOUND)
  set(CMAKE_CXX_FLAGS "${Elemental_COMPILE_FLAGS}")
  include_directories(${Elemental_INCLUDE_DIRS})
  add_definitions(${Elemental_DEFINITIONS})
  target_link_libraries(driver ${Elemental_LIBRARIES})
  if(Elemental_LINK_FLAGS)
    set_target_properties(driver PROPERTIES LINK_FLAGS ${Elemental_LINK_FLAGS})
  endif()
else()
  message(FATAL_ERROR "Could not locate Elemental installation")
endif()
